attempted fix on mobile svg rendering

--- a/assets/site-title.sass
+++ b/assets/site-title.sass
@@ -31,6 +31,7 @@
     grid-area: gradient
     background-image: url('/svgs/noise-gradient.svg')
     background-size: 100% auto
+    shape-rendering: crispEdges
 
 #site-title-text
     margin: 0.05em 0.2em 0 0
